<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/padding_normal" >


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/tvText"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/label_text"

        android:layout_marginBottom="@dimen/margin_normal"
            />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType=""
            android:ems="5"
            android:id="@+id/tvAuthor"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/label_author"

        android:layout_marginBottom="@dimen/margin_normal"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType=""
            android:ems="10"
            android:id="@+id/tvReference"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/label_reference"

        />


    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_language_text"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                />
            <Button
            android:id="@+id/btn_choose_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
            android:text="English"
                android:background="#DDD"
            android:padding="@dimen/padding_normal"
            />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_quote"
            android:id="@+id/btnAdd"
            android:layout_gravity="center_horizontal"
            style="@style/BtnGreen"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_quote_and_memorize"
            android:id="@+id/btnAddQuoteAndMemorize"
             android:layout_gravity="center_horizontal"
            style="@style/BtnGreen"
            />
    <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_label_done"
                android:id="@+id/btnDone"
                android:layout_gravity="center_horizontal"
                style="@style/BtnGreen"
                />
        </LinearLayout>


</LinearLayout>
</ScrollView>