<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
    <TextView
        android:id="@+id/quote_sequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:text="Quote sequence"
        android:layout_alignParentTop="true"/>
    <WebView
        android:id="@+id/memorizeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/quote_sequence"
        android:layout_weight="0"
        android:layout_above="@+id/frameLayout"/>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_alignParentBottom = "true"
                android:background="@color/memorize_toolbar_bg"
                android:id="@+id/frameLayout">
    <LinearLayout 
        android:id="@+id/buttonHolder"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         >
        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_previous"
            android:background="@drawable/selector_memorize_button_bg"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:visibility="visible"
            android:layout_weight="1" />
        <View
                android:layout_height="match_parent"
                android:layout_width="@dimen/toolbar_separator_width"
                android:background="@color/memorize_toolbar_separator" />
        <Button
	        android:id="@+id/btnHideWords"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_label_hide_words"
            android:paddingRight="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_normal"
            android:background="@drawable/selector_memorize_button_bg"
            style="@android:style/Widget.Holo.Button.Borderless"
             />
        <View
            android:layout_height="match_parent"
            android:layout_width="@dimen/toolbar_separator_width"
            android:background="@color/memorize_toolbar_separator" />
	
	    <Button
	        android:id="@+id/btnShowAllWords"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_label_show_words"
            android:paddingRight="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_normal"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:background="@drawable/selector_memorize_button_bg"
             />
        <View
                android:layout_height="match_parent"
                android:layout_width="@dimen/toolbar_separator_width"
                android:background="@color/memorize_toolbar_separator" />
	   <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_next"
           android:background="@drawable/selector_memorize_button_bg"
            style="@android:style/Widget.Holo.Button.Borderless"
           android:visibility="visible"
           android:layout_weight="1" />
    </LinearLayout>
    </FrameLayout>


</RelativeLayout>
